<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".activity.LoginActivity"
    android:background="@color/white">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="@dimen/_234sdp"
        android:layout_height="wrap_content"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            android:id="@+id/title"
            android:text="@string/enter_mobile"
            android:textSize="@dimen/_16ssp"
            android:textColor="@color/black"
            android:textStyle="bold"/>


        <EditText
            android:id="@+id/edt_mobile"
            style="@style/detail_edittext_style"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/_20sdp"
            android:autofillHints=""
            android:backgroundTint="@color/color_detail_textview_login_signup"
            android:gravity="center"
            android:hint="@string/username"
            android:inputType="phone"
            android:maxLength="10"
            android:textColorHint="@android:color/darker_gray"
            app:layout_constraintTop_toBottomOf="@+id/title" />

        <Button
            android:id="@+id/btn_login"
            style="@style/currency_digit_textview_style"
            android:layout_width="@dimen/_171sdp"
            android:layout_height="@dimen/_40sdp"
            android:layout_marginTop="@dimen/_20sdp"
            android:background="@drawable/btn_background"
            android:gravity="center"
            android:text="@string/login"
            android:textAllCaps="false"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/edt_mobile" />
    </androidx.constraintlayout.widget.ConstraintLayout>

</androidx.constraintlayout.widget.ConstraintLayout>