<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:paddingBottom="@dimen/_7sdp">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:layout_constraintTop_toTopOf="parent"
        android:background="@drawable/home_work_item_root_background"
        android:paddingBottom="@dimen/_10sdp">
        <TextView
            android:id="@+id/subject"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            tools:text="Mathematics"
            android:textColor="@color/white"
            android:textStyle="bold"
            app:layout_constraintWidth_percent="0.35"
            android:includeFontPadding="false"
            android:textSize="@dimen/_13ssp"
            android:padding="@dimen/_4sdp"
            android:paddingStart="@dimen/_5sdp"
            android:paddingEnd="@dimen/_5sdp"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            android:background="@drawable/home_work_subject_name_background" />

        <TextView
            android:id="@+id/class_number"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            tools:text="@string/str_class_section"
            app:layout_constraintTop_toBottomOf="@+id/subject"
            app:layout_constraintStart_toStartOf="parent"
            android:layout_marginStart="@dimen/_7sdp"
            android:layout_marginTop="@dimen/_5sdp"
            android:textSize="@dimen/_11ssp"
            android:fontFamily="@font/aller_std_bold"
            android:textColor="@color/black"
            android:textStyle="bold"/>

        <TableLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            app:layout_constraintTop_toBottomOf="@+id/class_number"
            app:layout_constraintStart_toStartOf="parent"
            android:layout_marginStart="@dimen/_15sdp"
            android:layout_marginTop="@dimen/_15sdp">
            <TableRow
                android:orientation="horizontal">
                <TextView
                    android:id="@+id/created_label"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/str_created"
                    app:layout_constraintTop_toBottomOf="@+id/class_number"
                    app:layout_constraintStart_toStartOf="parent"
                    style="@style/home_work_screen_text_style"/>

                <TextView
                    android:id="@+id/created_on_value"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/str_date"
                    app:layout_constraintTop_toBottomOf="@+id/class_number"
                    app:layout_constraintStart_toEndOf="@+id/created_label"
                    style="@style/home_work_screen_text_style"/>

                <TextView
                    android:id="@+id/created_by_value"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    tools:text="@string/str_created_by"
                    app:layout_constraintTop_toBottomOf="@+id/class_number"
                    app:layout_constraintStart_toStartOf="parent"
                    android:layout_marginStart="@dimen/_10sdp"
                    style="@style/home_work_screen_text_style"/>
            </TableRow>
            <TableRow
                android:orientation="horizontal">
                <TextView
                    android:id="@+id/submission_label"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/str_submission"
                    app:layout_constraintTop_toBottomOf="@+id/class_number"
                    app:layout_constraintStart_toStartOf="parent"
                    style="@style/home_work_screen_text_style"/>

                <TextView
                    android:id="@+id/submission_on_value"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    tools:text="@string/str_date"
                    app:layout_constraintTop_toBottomOf="@+id/class_number"
                    app:layout_constraintStart_toEndOf="@+id/created_label"
                    style="@style/home_work_screen_text_style"/>

                <TextView
                    android:id="@+id/evaluated_by_value"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    tools:text="@string/str_evaluated_by"
                    app:layout_constraintTop_toBottomOf="@+id/class_number"
                    app:layout_constraintStart_toStartOf="parent"
                    android:layout_marginStart="@dimen/_10sdp"
                    style="@style/home_work_screen_text_style"/>
            </TableRow>
            <TableRow
                android:orientation="horizontal">
                <TextView
                    android:id="@+id/evaluation_label"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/str_evaluation"
                    app:layout_constraintTop_toBottomOf="@+id/class_number"
                    app:layout_constraintStart_toStartOf="parent"
                    style="@style/home_work_screen_text_style"
                    android:layout_marginEnd="@dimen/_10sdp"/>

                <TextView
                    android:id="@+id/evaluation_on_value"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    tools:text="@string/str_date"
                    app:layout_constraintTop_toBottomOf="@+id/class_number"
                    app:layout_constraintStart_toEndOf="@+id/created_label"
                    style="@style/home_work_screen_text_style"/>
            </TableRow>
        </TableLayout>

        <TextView
            android:id="@+id/view_label"
            android:layout_width="wrap_content"
            android:layout_height="@dimen/_15sdp"
            android:text="@string/str_view"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toTopOf="@+id/subject"
            app:layout_constraintBottom_toBottomOf="@+id/subject"
            android:layout_marginEnd="@dimen/_8sdp"
            android:layout_marginStart="@dimen/_8sdp"
            android:fontFamily="@font/aller_std_light"
            android:textStyle="bold"
            android:textSize="@dimen/_11ssp"
            android:textColor="#3851A6"
            android:gravity="center_vertical"/>

        <ImageView
            android:layout_width="@dimen/_17sdp"
            android:layout_height="@dimen/_15sdp"
            android:id="@+id/img_view"
            app:layout_constraintEnd_toStartOf="@+id/view_label"
            app:layout_constraintTop_toTopOf="@+id/view_label"
            app:layout_constraintBottom_toBottomOf="@+id/view_label"
            android:layout_marginEnd="@dimen/_2sdp"
            android:src="@drawable/ic_view"
            android:contentDescription="@null"/>

        <ImageView
            android:layout_width="@dimen/_18sdp"
            android:layout_height="@dimen/_17sdp"
            android:id="@+id/img_download"
            app:layout_constraintEnd_toStartOf="@+id/img_view"
            app:layout_constraintTop_toTopOf="@+id/img_view"
            app:layout_constraintBottom_toBottomOf="@+id/img_view"
            android:layout_marginEnd="@dimen/_15sdp"
            android:src="@drawable/ic_download"
            android:contentDescription="@null"/>

        <ImageView
            android:layout_width="@dimen/_18sdp"
            android:layout_height="@dimen/_17sdp"
            android:id="@+id/img_upload"
            app:layout_constraintEnd_toStartOf="@+id/img_download"
            app:layout_constraintTop_toTopOf="@+id/img_view"
            app:layout_constraintBottom_toBottomOf="@+id/img_view"
            android:layout_marginEnd="@dimen/_15sdp"
            android:src="@drawable/ic_upload"
            android:contentDescription="@null"/>

        <TextView
            android:id="@+id/homework_status"
            android:layout_width="@dimen/_65sdp"
            android:layout_height="wrap_content"
            android:background="@drawable/home_work_complete_background"
            android:gravity="center"
            android:padding="@dimen/_1sdp"
            app:layout_constraintTop_toTopOf="@+id/class_number"
            app:layout_constraintEnd_toEndOf="@+id/view_label"
            android:textSize="@dimen/_11ssp"
            android:fontFamily="@font/aller_std_bold"
            android:textColor="@color/white"
            android:textStyle="bold"/>



    </androidx.constraintlayout.widget.ConstraintLayout>

</androidx.constraintlayout.widget.ConstraintLayout>