<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/layMainItem"
    android:layout_width="match_parent"
    android:layout_height="@dimen/_60sdp"
    android:layout_marginTop="@dimen/_1sdp"
    android:layout_marginBottom="@dimen/_1sdp"
    android:gravity="center">

    <RadioButton
        android:id="@+id/radio"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="@dimen/_5sdp"
        android:buttonTint="@color/purple_700"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/name"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        app:layout_constraintStart_toEndOf="@+id/radio"
        app:layout_constraintEnd_toStartOf="@+id/imgStudent"
        app:layout_constraintTop_toTopOf="parent"
        android:layout_marginTop="@dimen/_5sdp"
        android:layout_marginStart="@dimen/_5sdp"
        android:layout_marginEnd="@dimen/_5sdp"
        android:textColor="@color/black"
        android:gravity="start|center_vertical"
        android:textStyle="bold"
        android:maxLines="1"
        android:textSize="@dimen/_12ssp"
        android:text="@string/enter_mobile"/>

    <TextView
        android:id="@+id/grno"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        app:layout_constraintStart_toStartOf="@+id/name"
        app:layout_constraintEnd_toEndOf="@+id/name"
        app:layout_constraintTop_toBottomOf="@+id/name"
        android:layout_marginTop="@dimen/_2sdp"
        android:textColor="@color/black"
        android:gravity="start|center_vertical"
        android:maxLines="1"
        android:textSize="@dimen/_10ssp"
        android:text="@string/str_grno"/>

    <TextView
        android:id="@+id/rollno"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        app:layout_constraintStart_toStartOf="@+id/grno"
        app:layout_constraintEnd_toEndOf="@+id/grno"
        app:layout_constraintTop_toBottomOf="@+id/grno"
        android:layout_marginTop="@dimen/_2sdp"
        android:textColor="@color/black"
        android:gravity="start|center_vertical"
        android:maxLines="1"
        android:textSize="@dimen/_10ssp"
        android:text="@string/str_rollno"/>

    <com.school.teacher.customui.CircleImageView
        android:id="@+id/imgStudent"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:layout_gravity="center_horizontal"
        android:layout_marginTop="@dimen/_5sdp"
        android:layout_marginEnd="@dimen/_5sdp"
        android:layout_marginBottom="@dimen/_5sdp"
        android:contentDescription="@null"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintDimensionRatio="1:1"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:strokeColor="@color/purple_700"
        app:strokeWidth="@dimen/_2sdp" />

</androidx.constraintlayout.widget.ConstraintLayout>